@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-09T08:24:32Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-08-10T01:40:33Z",
+  "count" : 4,
+  "count_minmax" : [ 3, 4 ],
+  "count_decinc" : [ -0, +4 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
