@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-09T16:25:54Z",
+  "timestamp" : "2022-08-10T01:40:33Z",
   "count_outdated" : 2324,
   "uniques_outdated" : 530,
-  "count" : 2357,
-  "uniques" : 549,
+  "count" : 2358,
+  "uniques" : 550,
   "clones" : [
     {
       "timestamp": "2022-07-27T00:00:00Z",
@@ -98,10 +98,10 @@
     },
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
